--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -5,49 +5,38 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+    <div class="navbar">
+
+            <a class="active" href="{{ url_for('user_dashboard') }}">Dashboard</a>
+            <a href="{{ url_for('task_management') }}">Task Management</a>
+            <a href="{{ url_for('create_task') }}">Add Task</a>
+            <a href="{{ url_for('logout') }}">Logout</a>
+    </div>
+
     <h1>Welcome, User!</h1>
     <p>This is your dashboard where you can view and manage your tasks.</p>
 
-    <h2>Your Tasks</h2>
-    <ul>
-        {% for task in tasks %}
-            <li>{{ task.Name }} - {{ task.description }} ({{ task.status }})</li>
-        {% endfor %}
-    </ul>
+<!--    <h2>Your Tasks</h2>-->
+<!--    <ul>-->
+<!--        {% for task in tasks %}-->
+<!--            <li>{{ task.Name }} - {{ task.description }} ({{ task.status }})</li>-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
 
-    <div id="addTaskFormContainer">
-        <button id="showAddTaskFormBtn">Add Task</button>
-        <form id="addTaskForm" method="POST" action="{{ url_for('add_task') }}" style="display: none;">
-            <div class="form-group">
-                <label for="task_name">Task Name:</label>
-                <input type="text" id="task_name" name="task_name" required>
-            </div>
-            <div class="form-group">
-                <label for="description">Description:</label>
-                <textarea id="description" name="description" required></textarea>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create Task">
-            </div>
-        </form>
-    </div>
 
-    <p>
-        <a href="{{ url_for('logout') }}">Logout</a>
-    </p>
 
-    <script>
-        const addTaskFormContainer = document.getElementById('addTaskFormContainer');
-        const showAddTaskFormBtn = document.getElementById('showAddTaskFormBtn');
-        const addTaskForm = document.getElementById('addTaskForm');
+<!--    <script>-->
+<!--        const addTaskFormContainer = document.getElementById('addTaskFormContainer');-->
+<!--        const showAddTaskFormBtn = document.getElementById('showAddTaskFormBtn');-->
+<!--        const addTaskForm = document.getElementById('addTaskForm');-->
 
-        showAddTaskFormBtn.addEventListener('click', function() {
-            if (addTaskForm.style.display === 'none') {
-                addTaskForm.style.display = 'block';
-            } else {
-                addTaskForm.style.display = 'none';
-            }
-        });
-    </script>
+<!--        showAddTaskFormBtn.addEventListener('click', function() {-->
+<!--            if (addTaskForm.style.display === 'none') {-->
+<!--                addTaskForm.style.display = 'block';-->
+<!--            } else {-->
+<!--                addTaskForm.style.display = 'none';-->
+<!--            }-->
+<!--        });-->
+<!--    </script>-->
 </body>
 </html>
