--- a/templates/superadmin_dashboard.html
+++ b/templates/superadmin_dashboard.html
@@ -3,7 +3,6 @@
 <head>
     <title>Superadmin Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-
 </head>
 <body>
     <div class="navbar">
@@ -18,8 +17,32 @@
         <a href="{{ url_for('logout') }}">Logout</a>
     </div>
 
-    <h1>Welcome, Superadmin!</h1>
+    <h1>Welcome, {{ username }}!</h1>
     <p>This is your dashboard where you can manage users and tasks.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Level</th>
+                <th>Message</th>
+            </tr>
+        </thead>
+            <tbody>
+            {% for entry in log_entries %}
+                {% if entry.split(' - ')[2] != "127.0.0.1"%}
+                {% if entry.split(' - ')[0] != " * Running on http://127.0.0.1:5000\n"%}
 
+                <tr>
+                    <td>{{ entry.split(' - ')[0] }}</td>
+                    <td>{{ entry.split(' - ')[2] }}</td>
+                    <td>{{ entry.split(' - ')[4] }}</td>
+                </tr>
+                {% endif%}
+                {% endif%}
+
+
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
